# NuOpt

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: cmake.yml
src/: CMakeLists.txt  Resources.rc  Resources.rc.in
test/: CMakeLists.txt
